--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,15 +16,28 @@
     "@acme/api": "workspace:^0.1.0",
     "@acme/auth": "workspace:^0.1.0",
     "@acme/db": "workspace:^0.1.0",
+    "@mantine/core": "^7.3.1",
+    "@mantine/dates": "^7.3.1",
+    "@mantine/form": "^7.3.1",
+    "@mantine/hooks": "^7.3.1",
+    "@mantine/notifications": "^7.3.1",
+    "@mantine/spotlight": "^7.3.1",
+    "@mantine/tiptap": "^7.3.1",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tabler/icons-react": "^2.42.0",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
     "@tanstack/react-query-next-experimental": "5.8.7",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "dayjs": "^1.11.10",
     "next": "^14.0.3",
+    "postcss-preset-mantine": "^1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
@@ -33,7 +46,6 @@
   "devDependencies": {
     "@acme/eslint-config": "workspace:^0.2.0",
     "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tailwind-config": "workspace:^0.1.0",
     "@acme/tsconfig": "workspace:^0.1.0",
     "@types/node": "^18.18.13",
     "@types/react": "^18.2.42",
@@ -41,7 +53,6 @@
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.53.0",
     "prettier": "^3.1.0",
-    "tailwindcss": "3.3.5",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
