chore: rename local packages from acme to alparr

--- a/apps/auth-proxy/package.json
+++ b/apps/auth-proxy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/auth-proxy",
+  "name": "@alparr/auth-proxy",
   "private": true,
   "type": "module",
   "scripts": {
@@ -14,9 +14,9 @@
     "@auth/core": "^0.18.4"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:^0.2.0",
-    "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tsconfig": "workspace:^0.1.0",
+    "@alparr/eslint-config": "workspace:^0.2.0",
+    "@alparr/prettier-config": "workspace:^0.1.0",
+    "@alparr/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.53.0",
     "nitropack": "^2.8.1",
     "prettier": "^3.1.0",
@@ -25,8 +25,8 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base"
+      "@alparr/eslint-config/base"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@alparr/prettier-config"
 }
