--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/eslint-config",
+  "name": "@alparr/eslint-config",
   "version": "0.2.0",
   "private": true,
   "license": "MIT",
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
-    "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tsconfig": "workspace:^0.1.0",
+    "@alparr/prettier-config": "workspace:^0.1.0",
+    "@alparr/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.53.0",
     "typescript": "^5.3.3"
   },
@@ -38,5 +38,5 @@
       "./base.js"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@alparr/prettier-config"
 }
