--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,7 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # The database URL is used to connect to your PlanetScale database.
-DB_HOST='aws.connect.psdb.cloud'
-DB_NAME='YOUR_DB_NAME'
-DB_USERNAME=''
-DB_PASSWORD='pscale_pw_'
+DB_URL='FULL_PATH_TO_YOUR_SQLITE_DB_FILE'
 
 # @see https://next-auth.js.org/configuration/options#nextauth_url
 AUTH_URL='http://localhost:3000'
