--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,6 +16,8 @@
     "@auth/core": "^0.18.4",
     "@auth/drizzle-adapter": "^0.3.9",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "bcrypt": "^5.1.1",
+    "cookies": "^0.8.0",
     "next": "^14.0.3",
     "next-auth": "5.0.0-beta.4",
     "react": "18.2.0",
@@ -26,6 +28,8 @@
     "@alparr/eslint-config": "workspace:^0.2.0",
     "@alparr/prettier-config": "workspace:^0.1.0",
     "@alparr/tsconfig": "workspace:^0.1.0",
+    "@types/bcrypt": "5.0.2",
+    "@types/cookies": "0.7.10",
     "eslint": "^8.53.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.3"
