--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@alparr/auth": "workspace:^0.1.0",
     "@alparr/db": "workspace:^0.1.0",
+    "@alparr/validation": "workspace:^0.1.0",
     "@trpc/client": "next",
     "@trpc/server": "next",
     "superjson": "2.2.1",
