--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,6 +16,7 @@
     "@alparr/api": "workspace:^0.1.0",
     "@alparr/auth": "workspace:^0.1.0",
     "@alparr/db": "workspace:^0.1.0",
+    "@alparr/translation": "workspace:^",
     "@alparr/ui": "workspace:^0.1.0",
     "@alparr/validation": "workspace:^0.1.0",
     "@mantine/core": "^7.3.1",
