chore: move zod only to validation package

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -42,8 +42,7 @@
     "postcss-preset-mantine": "^1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "2.2.1",
-    "zod": "^3.22.2"
+    "superjson": "2.2.1"
   },
   "devDependencies": {
     "@alparr/eslint-config": "workspace:^0.2.0",
