--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,8 +17,7 @@
     "@alparr/validation": "workspace:^0.1.0",
     "@trpc/client": "next",
     "@trpc/server": "next",
-    "superjson": "2.2.1",
-    "zod": "^3.22.2"
+    "superjson": "2.2.1"
   },
   "devDependencies": {
     "@alparr/eslint-config": "workspace:^0.2.0",
