--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -21,8 +21,7 @@
     "next": "^14.0.3",
     "next-auth": "5.0.0-beta.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zod": "^3.22.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@alparr/eslint-config": "workspace:^0.2.0",
