chore: rename packages from alparr to homarr

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,7 @@
   "packageRules": [
     {
       "matchPackagePatterns": [
-        "^@alparr/"
+        "^@homarr/"
       ],
       "enabled": false
     }
