--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alparr",
+  "name": "homarr",
   "private": true,
   "engines": {
     "node": ">=18.18.2"
@@ -21,7 +21,7 @@
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
-    "@alparr/prettier-config": "workspace:^0.1.0",
+    "@homarr/prettier-config": "workspace:^0.1.0",
     "@turbo/gen": "^1.10.16",
     "prettier": "^3.1.0",
     "turbo": "^1.10.16",
@@ -32,5 +32,5 @@
       "@auth/core": "0.18.0"
     }
   },
-  "prettier": "@alparr/prettier-config"
+  "prettier": "@homarr/prettier-config"
 }
