--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,16 +17,13 @@
     "@homarr/auth": "workspace:^0.1.0",
     "@homarr/db": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
+    "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@mantine/core": "^7.3.1",
-    "@mantine/dates": "^7.3.1",
-    "@mantine/form": "^7.3.1",
+    "@homarr/spotlight": "workspace:^0.1.0",
+    "@homarr/form": "workspace:^0.1.0",
     "@mantine/hooks": "^7.3.1",
-    "@mantine/notifications": "^7.3.1",
-    "@mantine/spotlight": "^7.3.1",
     "@mantine/tiptap": "^7.3.1",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tabler/icons-react": "^2.42.0",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
     "@tanstack/react-query-next-experimental": "5.8.7",
