--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "@homarr/{{name}}",
+    "name": "@homarr/notifications",
     "private": true,
     "version": "0.1.0",
     "exports": {
-        ".": "./index.ts"
+        ".": "./index.ts",
+        "./styles.css": "./src/styles.css"
     },
     "typesVersions": {
         "*": {
@@ -17,7 +18,7 @@
         "clean": "rm -rf .turbo node_modules",
         "lint": "eslint .",
         "format": "prettier --check . --ignore-path ../../.gitignore",
-        "typecheck": "tsc--noEmit"
+        "typecheck": "tsc --noEmit"
     },
     "devDependencies": {
         "@homarr/eslint-config": "workspace:^0.2.0",
@@ -25,6 +26,10 @@
         "@homarr/tsconfig": "workspace:^0.1.0",
         "eslint": "^8.53.0",
         "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "@mantine/notifications": "7.3.2",
+        "@homarr/ui": "workspace:^0.1.0"
     },
     "eslintConfig": {
         "extends": [
