--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,14 +16,15 @@
     "@homarr/api": "workspace:^0.1.0",
     "@homarr/auth": "workspace:^0.1.0",
     "@homarr/db": "workspace:^0.1.0",
+    "@homarr/form": "workspace:^0.1.0",
+    "@homarr/notifications": "workspace:^0.1.0",
+    "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
-    "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@homarr/spotlight": "workspace:^0.1.0",
-    "@homarr/form": "workspace:^0.1.0",
-    "@mantine/hooks": "^7.3.1",
-    "@mantine/tiptap": "^7.3.1",
+    "@homarr/widgets": "workspace:^0.1.0",
+    "@mantine/hooks": "^7.3.2",
+    "@mantine/tiptap": "^7.3.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
@@ -36,6 +37,8 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "dayjs": "^1.11.10",
+    "jotai": "^2.6.0",
+    "mantine-modal-manager": "^7.3.2",
     "next": "^14.0.3",
     "postcss-preset-mantine": "^1.11.1",
     "react": "18.2.0",
