--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,37 +1,32 @@
 {
-  "name": "@homarr/db",
-  "version": "0.1.0",
+  "name": "@homarr/common",
   "private": true,
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "version": "0.1.0",
+  "exports": {
+    ".": "./index.ts"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "src/*"
+      ]
+    }
+  },
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
-    "push": "drizzle-kit push:sqlite",
-    "studio": "drizzle-kit studio",
     "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@homarr/common": "workspace:^0.1.0",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "better-sqlite3": "^9.2.2",
-    "drizzle-orm": "^0.29.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
-    "@types/better-sqlite3": "7.6.8",
-    "dotenv-cli": "^7.3.0",
-    "drizzle-kit": "^0.20.6",
     "eslint": "^8.53.0",
-    "prettier": "^3.1.0",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
-    "root": true,
     "extends": [
       "@homarr/eslint-config/base"
     ]
