feat: move integration definitions to homarr/definitions, add temporary test connection solution without actual request

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@homarr/auth": "workspace:^0.1.0",
+    "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/db": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
     "@trpc/client": "next",
