--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@homarr/validation",
+  "name": "@homarr/notifications",
   "private": true,
   "version": "0.1.0",
   "exports": {
-    ".": "./index.ts"
+    ".": "./index.ts",
+    "./styles.css": "./src/styles.css"
   },
   "typesVersions": {
     "*": {
@@ -26,13 +27,14 @@
     "eslint": "^8.53.0",
     "typescript": "^5.3.3"
   },
+  "dependencies": {
+    "@mantine/notifications": "7.3.2",
+    "@homarr/ui": "workspace:^0.1.0"
+  },
   "eslintConfig": {
     "extends": [
       "@homarr/eslint-config/base"
     ]
   },
-  "prettier": "@homarr/prettier-config",
-  "dependencies": {
-    "zod": "^3.22.2"
-  }
+  "prettier": "@homarr/prettier-config"
 }
