feat: add widget preview pages (#9)
* feat: add widget definition system

* fix: wrong typecheck command in turbo generator

* chore: fix formatting

* feat: add widget preview page

* chore: fix formatting and type errors

* chore: fix from widget edit modal and remove some never casts

* chore: address pull request feedback

--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@homarr/spotlight",
+  "name": "@homarr/widgets",
   "private": true,
   "version": "0.1.0",
   "exports": {
-    ".": "./index.ts",
-    "./styles.css": "./src/styles.css"
+    ".": "./index.ts"
   },
   "typesVersions": {
     "*": {
@@ -34,6 +33,10 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
-    "@mantine/spotlight": "^7.3.2"
+    "@homarr/ui": "workspace:^0.1.0",
+    "@homarr/form": "workspace:^0.1.0",
+    "@homarr/notifications": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
+    "@homarr/validation": "workspace:^0.1.0"
   }
 }
