--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@homarr/ui",
+  "name": "@homarr/common",
   "private": true,
   "version": "0.1.0",
   "exports": {
-    ".": "./index.ts",
-    "./styles.css": "./src/styles.css"
+    ".": "./index.ts"
   },
   "typesVersions": {
     "*": {
@@ -24,7 +23,6 @@
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
-    "@types/css-modules": "^1.0.5",
     "eslint": "^8.53.0",
     "typescript": "^5.3.3"
   },
@@ -33,10 +31,5 @@
       "@homarr/eslint-config/base"
     ]
   },
-  "prettier": "@homarr/prettier-config",
-  "dependencies": {
-    "@mantine/core": "^7.3.2",
-    "@mantine/dates": "7.3.2",
-    "@tabler/icons-react": "^2.42.0"
-  }
+  "prettier": "@homarr/prettier-config"
 }
