--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -33,10 +33,11 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
-    "@homarr/ui": "workspace:^0.1.0",
+    "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
+    "@homarr/ui": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0"
   }
 }
