--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,7 +25,7 @@
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "@types/css-modules": "^1.0.5",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
@@ -35,8 +35,8 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
-    "@mantine/core": "^7.3.2",
-    "@mantine/dates": "7.3.2",
+    "@mantine/core": "^7.4.0",
+    "@mantine/dates": "^7.4.0",
     "@tabler/icons-react": "^2.42.0"
   }
 }
