--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@homarr/api",
   "version": "0.1.0",
+  "exports": {
+    ".": "./index.ts",
+    "./client": "./src/client.ts"
+  },
   "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
@@ -12,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@homarr/widgets": "workspace:^0.1.0",
     "@homarr/auth": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/db": "workspace:^0.1.0",
