--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
+    "@homarr/widgets": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "better-sqlite3": "^9.2.2",
