--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@homarr/ui": "workspace:^0.1.0",
     "@homarr/form": "workspace:^0.1.0",
+    "@homarr/api": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0"
