config: add base branch to renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,5 +14,6 @@
   ],
   "updateInternalDeps": true,
   "rangeStrategy": "bump",
-  "automerge": false
+  "automerge": false,
+  "baseBranches": ["dev"]
 }
