config: remove docker properties renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,5 +15,6 @@
   "updateInternalDeps": true,
   "rangeStrategy": "bump",
   "automerge": false,
-  "baseBranches": ["dev"]
+  "baseBranches": ["dev"],
+  "branchPrefix": "renovate/"
 }
