--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "platform": "github",
   "extends": [
-    "config:base"
+    "config:recommended"
   ],
   "packageRules": [
     {
@@ -15,6 +15,9 @@
   "updateInternalDeps": true,
   "rangeStrategy": "bump",
   "automerge": false,
-  "baseBranches": ["dev"],
-  "branchPrefix": "renovate/"
+  "baseBranches": [
+    "dev"
+  ],
+  "branchPrefix": "renovate/",
+  "autodiscover": true
 }
