--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ AUTH_URL='http://localhost:3000'
 # You can generate the secret via 'openssl rand -base64 32' on Unix
 # @see https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET='supersecret'
+
+TURBO_TELEMETRY_DISABLED=1
