chore: add initial db migration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean:workspaces": "turbo clean",
     "db:push": "pnpm -F db push",
     "db:studio": "pnpm -F db studio",
+    "db:migration:generate": "pnpm -F db migration:generate",
     "dev": "turbo dev --parallel",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
@@ -24,11 +25,13 @@
   },
   "devDependencies": {
     "@homarr/prettier-config": "workspace:^0.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@turbo/gen": "^1.12.2",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
     "cross-env": "^7.0.3",
+    "jsdom": "^24.0.0",
     "prettier": "^3.2.4",
     "turbo": "^1.12.2",
     "typescript": "^5.3.3",
