--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@homarr/auth",
   "version": "0.1.0",
+  "exports": {
+    ".": "./index.ts",
+    "./security": "./security.ts"
+  },
   "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
