--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "exports": {
     ".": "./index.ts",
-    "./security": "./security.ts"
+    "./security": "./security.ts",
+    "./client": "./client.ts",
+    "./env.mjs": "./env.mjs"
   },
   "private": true,
   "main": "./index.ts",
