--- a/packages/spotlight/package.json
+++ b/packages/spotlight/package.json
@@ -34,6 +34,7 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
-    "@mantine/spotlight": "^7.5.3"
+    "@mantine/spotlight": "^7.5.3",
+    "@homarr/ui": "workspace:^0.1.0"
   }
 }
