chore: address pull request feedback

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,7 +4,8 @@
   "exports": {
     ".": "./index.ts",
     "./client": "./client.ts",
-    "./schema/sqlite": "./schema/sqlite.ts"
+    "./schema/sqlite": "./schema/sqlite.ts",
+    "./test": "./test/index.ts"
   },
   "private": true,
   "main": "./index.ts",
