test: add initial unit tests (#56)
* chore: add initial db migration

* test: add unit tests for packages auth, common, widgets

* fix: deep source issues

* fix: format issues

* wip: add unit tests for api routers

* fix: deep source issues

* test:  add missing unit tests for integration router

* wip: board tests

* test: add unit tests for board router

* fix: remove unnecessary null assertions

* fix: deepsource issues

* fix: formatting

* fix: pnpm lock

* fix: lint and typecheck issues

* chore: address pull request feedback

* fix: non-null assertions

* fix: lockfile broken

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@homarr/auth",
   "version": "0.1.0",
+  "exports": {
+    ".": "./index.ts",
+    "./security": "./security.ts",
+    "./client": "./client.ts",
+    "./env.mjs": "./env.mjs"
+  },
   "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
