--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,7 +4,8 @@
   "exports": {
     ".": "./index.ts",
     "./client": "./client.ts",
-    "./schema/sqlite": "./schema/sqlite.ts"
+    "./schema/sqlite": "./schema/sqlite.ts",
+    "./test": "./test/index.ts"
   },
   "private": true,
   "main": "./index.ts",
@@ -14,6 +15,7 @@
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "migration:generate": "drizzle-kit generate:sqlite",
     "push": "drizzle-kit push:sqlite",
     "studio": "drizzle-kit studio",
     "typecheck": "tsc --noEmit"
