Test pnpm install caching

--- a/tooling/github/setup/action.yml
+++ b/tooling/github/setup/action.yml
@@ -4,7 +4,22 @@ description: "Common setup steps for Actions"
 runs:
   using: composite
   steps:
-    - uses: pnpm/action-setup@v2
+    - uses: pnpm/action-setup@v3
+      with:
+       version: 8
+       run_install: false
+
+    - shell: bash
+      run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - uses: actions/cache@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
+
     - uses: actions/setup-node@v4
       with:
         node-version: 18
