--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -43,7 +43,7 @@
     "@homarr/gridstack": "^1.0.0",
     "jotai": "^2.6.4",
     "mantine-modal-manager": "^7.5.2",
-    "next": "^14.1.0",
+    "next": "^14.1.1-canary.58",
     "postcss-preset-mantine": "^1.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
