--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -47,9 +47,9 @@
     "postcss-preset-mantine": "^1.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.71.0",
     "superjson": "2.2.1",
-    "use-deep-compare-effect": "^1.8.1",
-    "sass": "^1.71.0"
+    "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
