feat: add winston logger

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ AUTH_URL='http://localhost:3000'
 AUTH_SECRET='supersecret'
 
 TURBO_TELEMETRY_DISABLED=1
+
+# This is temporary to use winston logger, I'll find a better way to do this
+NODE_OPTIONS='-r ./logger.js'
